compiler/testData/cli/jvm/internalArgumentOverrideExtraArgument.out
warning: ATTENTION!
This build uses unsafe internal compiler arguments:

-XXLanguage:+SoundSmartCastsAfterTry

This mode is not recommended for production use,
as no stability/compatibility guarantees are given on
compiler or generated code. Use it at your own risk!

compiler/testData/cli/jvm/legacySmartCastsAfterTry.kt:8:9: error: only safe (?.) or non-null asserted (!!.) calls are allowed on a nullable receiver of type String?
    some.length
        ^
COMPILATION_ERROR
